Corrected URL for data load.

--- a/interactive_testing/visual.html
+++ b/interactive_testing/visual.html
@@ -50,7 +50,7 @@
       .attr("height", h)
       .attr("fill", "lightblue");
       
-  d3.csv("D:/Documents/Schoolwork/Grad School - Fall 2021/EDAV/Final Project/tophundred.csv", rowConverter)
+  d3.csv("https://raw.githubusercontent.com/Tylermarshall21/NYCArrests/main/interactive_testing/tophundred.csv", rowConverter)
   .then(function(data) {
     // stuff that requires the loaded data
     console.log("Nothing to see here!")
