Additional Data now in interactive component! We should be ready to go with UI/Questions.

--- a/interactive_testing/visual.html
+++ b/interactive_testing/visual.html
@@ -78,8 +78,12 @@
       key: +d.Ranking,
       date: d.ARREST_DATE,
       weekday: d.Weekday,
-      arrest_count: +d.Number_Arrests
-      
+      arrest_count: +d.Number_Arrests,
+      year: d.ARREST_YEAR,
+      month_num: d.ARREST_MONTH,
+      month_text: d.ARREST_MONTH_TEXT,
+      precip: +d.Precipitation,
+      temp: +d.Mean_Temperature,
     }
     
   };
